--- a/k8s/core/orders/app.yaml
+++ b/k8s/core/orders/app.yaml
@@ -35,7 +35,7 @@ spec:
         version: v1
     spec:
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
       containers:
         - name: orders
           image: ghcr.io/helidon-sockshop/orders-core:2.2.0
