--- a/k8s/core/shipping/app.yaml
+++ b/k8s/core/shipping/app.yaml
@@ -50,7 +50,7 @@ spec:
         version: v1
     spec:
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
       containers:
         - name: shipping
           image: ghcr.io/helidon-sockshop/shipping-core:2.2.0
