--- a/k8s/mongo/users/db.yaml
+++ b/k8s/mongo/users/db.yaml
@@ -22,7 +22,7 @@ spec:
         name: users-db
     spec:
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
       containers:
       - name: users-db
         image: mongo:4.2.2
