--- a/k8s/optional/original-front-end.yaml
+++ b/k8s/optional/original-front-end.yaml
@@ -33,7 +33,7 @@ spec:
         app: front-end
     spec:
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
       containers:
       - name: front-end
         image: weaveworksdemos/front-end:0.3.12
