--- a/k8s/redis/payment/db.yaml
+++ b/k8s/redis/payment/db.yaml
@@ -22,7 +22,7 @@ spec:
         name: payment-db
     spec:
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
       containers:
       - name: payment-db
         image: redis:5.0.7
