--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -6,14 +6,7 @@
 name: trivy
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "master" ]
-  schedule:
-    - cron: '19 8 * * 4'
-
+  workflow_dispatch:
 permissions:
   contents: read
 
